# pixelflut

./: .gitignore  Cargo.toml  README.md  project.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: criterion.rs
benches/benchmarks/: mod.rs  parsing_color.rs  parsing_coordinates.rs
client/: Cargo.toml  loop.bat  pixelflut.py
client/src/: main.rs
display/: Cargo.toml  build.rs
display/msvc/lib/64/: SDL2_gfx.lib
display/msvc/lib/86/: SDL2_gfx.lib
display/src/: main.rs
fuzz/: .gitignore  Cargo.toml  fuzz.ps1  fuzz_color.ps1  fuzz_coordinate.ps1
fuzz/fuzz_targets/: pixelflut_fuzz.rs
fuzz/src/: main.rs
in/: test_messages.txt
proxy/: Cargo.toml
proxy/src/: main.rs
src/: client.rs  config.rs  integration_test.rs  lib.rs  lines.rs  macros.rs  main.rs  screen.rs
src/client/: mod.rs
src/client/parse/: basic.rs  gen_basic.py  mod.rs
src/features/: tokio.rs
src/handlers/: async_handler.rs  client.rs  cpu_handler.rs  max_threads.rs  mod.rs  screen.rs
src/input/: max_threads.rs  mod.rs  tokio.rs
src/mode/: async_std.rs  max_threads.rs  mod.rs  tokio.rs
src/output/: minifb.rs  mod.rs
src/parse/: bytewise.rs  memcache.rs  mod.rs  python_generate.py  python_generated.rs  std.rs
src/screen/: fb.rs  mod.rs  windowed.rs
src/utils/: mod.rs  parse_hex.rs  parse_usize.rs
