[package]
authors = ["trangar <Victor 'Trangar' Koenders>"]
edition = "2018"
name = "pixelflut"
version = "0.1.0"

[features]
threadpool = []
max-threads = []
windowed = ["minifb"]
memory-cache = []

[dependencies]
tokio = { version = "1.0", features = ["net", "macros", "rt-multi-thread"], optional = true }
async-std = { version = "1.0", features = ["attributes"], optional = true }
io-uring = { version = "0.5", optional = true }
minifb = { version = "0.20", optional = true }

# [dev-dependencies]
# proptest = "1.0"
# lazy_static = "1.3"
# rand = "0.8"
# hashbrown = { version = "0.12", features = ["nightly"] }

[profile.release]
lto = true

[target."cfg(target_os=\"linux\")".dependencies]
framebuffer = "0.3"
