[package]
authors = ["Victor Koenders <pixelflut@trangar.com>"]
edition = "2018"
name = "pixelflut"
version = "2.0.0-alpha.0"

[features]
default = []
lint = ["tokio", "windowed"]

# Modes:
threadpool = []
max-threads = []

# Extra features:
windowed = ["minifb"]
memory-cache = []

[dependencies]
# Modes:
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time"], optional = true }
async-std = { version = "1.0", optional = true }
io-uring = { version = "0.5", optional = true }

# Extra features:
minifb = { version = "0.20", optional = true }

# Base dependencies
clap = { version = "3.0", features = ["derive"] }
cfg-if = "1.0.0"

[profile.release]
lto = true

[target."cfg(target_os=\"linux\")".dependencies]
framebuffer = "0.3"
