[workspace]
members = [
	"fuzz"
]

[package]
authors = ["Victor Koenders <pixelflut@trangar.com>"]
edition = "2021"
name = "pixelflut"
version = "2.0.0-alpha.0"
default-run = "pixelflut"

[[bench]]
name = "criterion"
harness = false

[[bin]]
name = "pixelflut"

[[bin]]
name = "memory-cache"
required-features = ["memory-cache"]

[features]
default = []

# Modes:
threadpool = []
max-threads = []

# Extra features:
windowed = ["minifb"]
memory-cache = []

[dependencies]
# Modes:
tokio = { version = "1.17", features = ["rt-multi-thread", "net", "io-util", "time"], optional = true }
async-std = { version = "1.11", optional = true }
io-uring = { version = "0.5", optional = true }

# Extra features:
minifb = { version = "0.20", optional = true }

# Base dependencies
clap = { version = "3.1", features = ["derive"] }
cfg-if = "1.0"
rand = "0.8"
bytemuck = "1.8"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"

[profile.release]
lto = true
debug = true

[target."cfg(target_os=\"linux\")".dependencies]
framebuffer = "0.3"
